2008-12-08  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Use internerr instead of ohshit. Do not
	mark the string for translation.
	* src/trigcmd.c (do_check): Use internerr instead of abort.
	* lib/dump.c (w_status): Likewise.
	* lib/triglib.c (trig_incorporate): Likewise. Remove <stdlib.h>
	include.
	* scripts/Dpkg/IPC.pm (_sanity_check_opts): Use internerr instead of
	error.
	(fork_and_exec): Likewise. Do not mark the string for translation.
	(wait_child): Likewise.
	* scripts/Dpkg/Source/Archive.pm: Use internerr instead of error from
	Dpkg::ErrorHandling.
	(_add_entry, add_file, add_directory): Likewise.
	* scripts/Dpkg/Source/CompressedFile.pm: Likewise.
	(get_filename): Likewise.
	* scripts/Dpkg/Source/Compressor.pm: Likewise.
	(_sanity_check): Likewise.
	* scripts/Dpkg/Source/Package.p (do_extract, do_build): Likewise.
	* scripts/Dpkg/Source/Patch.pm (add_diff_file): Use error instead of
	internerr.

2008-12-08  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (do_internerr): Reorder arguments. Support format
	strings.
	(internerr): Likewise.
	* lib/ehandle.c (do_internerr): Likewise.

2008-12-08  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/ErrorHandling.pm (@EXPORT): Remove 'failure'.
	(failure): Remove function.
	(syserr): Rename 'failure' string to 'error'.
	(subprocerr): Use error instead of failure.
	* scripts/Dpkg/Checksums.pm (extractchecksum): Likewise.
	* scripts/Dpkg/Source/Functions.pm (erasedir): Likewise.
	* scripts/changelog/debian.pl: Likewise.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-shlibdeps.pl: Likewise.
	* scripts/dpkg-buildpackage.pl: Use syserr instead of failure.

2008-12-08  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/ErrorHandling.pm (@EXPORT_OK): Move info, warning,
	warnerror, error, errormsg, failure, syserr, internerr, subprocerr,
	usageerr and syntaxerr to ...
	(@EXPORT): ... here. Fix all users.

2008-12-08  Modestas Vainius  <modestas@vainius.eu>