@@ -1,5 +1,10 @@
 2008-12-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/Deps.pm (parse): Do not use sprintf for warning.
+	(implies): Do not use sprintf for internerr.
+
+2008-12-08  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/build.c (do_build): Use internerr instead of ohshit. Do not
 	mark the string for translation.
 	* src/trigcmd.c (do_check): Use internerr instead of abort.
